# c-collection

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  c-collection.geany  clean-geany-file.sh  meson.build  vs2010.sh  vs2010_meson.sh  vs2015.sh
acutest/: README.md
aoc2025/: .gitignore  README.md
aoc2025/1/: README.txt  aoc2025-1.c
aoc2025/2/: README.txt  aoc2025-2.c
aoc2025/3/: README.txt  aoc2025-3.c
aoc2025/4/: README.txt  aoc2025-4.c
aoc2025/5/: README.txt  aoc2025-5.c
aoc2025/6/: README.txt  aoc2025-6.c
aoc2025/7/: README.txt  aoc2025-7.c
aoc2025/8/: README.txt  aoc2025-8.c
aoc2025/9/: README.txt  aoc2025-9.c
countIsland/: CMakeLists.txt  README.md  countIsland.c  countIslandInput.txt  meson.build  numberOfIsland.c
multiprecisionArithmetic/: 1000_factorial.c  CMakeLists.txt  DOCS.md  README.md  add.c  add_decimal.c  addb.c  bigDecimal.h  bigIntTest.c  bigInteger-experimental.h  bigInteger.h  bitTest.c  checkfib.c  compare.c  count.c  decimal_test.c  demo  demo.c  divide.c  factorial.c  factorial_pool.c  fibmillion.c  fibonacci.c  genfib.c  gmpfib.c  karatsuba  karatsuba.c  karatsuba_time.c  limb_size_graph.c  meson.build  msvc32bitassembly.h  multiply.c  multiprecisionArithmetic.h  performance.c  pool.h  set.c  shift.c  subtract.c  test.c  toomcook3.c
others/: README.md  acutest.h  snprintf.c  snprintf.h
