executable('add', 'add.c')
executable('subtract', 'subtract.c')
executable('multiply', 'multiply.c')
executable('divide', 'divide.c')

executable('test_', 'test.c')
executable('bigIntTest', ['bigIntTest.c', '../others/snprintf.c'])

executable('demo', 'demo.c')
executable('performance', 'performance.c')
executable('set', 'set.c')
executable('factorial', 'factorial.c')
executable('factorial_pool', 'factorial_pool.c')
executable('1000_factorial', '1000_factorial.c')
executable('compare', 'compare.c')
executable('count', 'count.c')
executable('fibonacci', 'fibonacci.c')
executable('genfib', 'genfib.c')
executable('checkfib', 'checkfib.c')
executable('shift', 'shift.c')
executable('karatsuba', 'karatsuba.c')
executable('addb','addb.c')
